--- a/gate-of-heaven-tour.html
+++ b/gate-of-heaven-tour.html
@@ -65,15 +65,16 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <div class="mb-5"><img class="w-100 rounded-3" src="./assets/img/dest/tanahlotsunset/tanahlottemple.jpg" alt="Tanah Lot Sunset"></div>
-              <h1 class="fw-bold fs-3 fs-lg-5 mb-3">Tanah Lot Sunset Tour</h1>
-              <h5 class="text-warning fw-bold mb-4">Price : USD 40/ Car (6 Hours)</h5>
+              <div class="mb-5"><img class="w-100 rounded-3" src="./assets/img/dest/gateofheaven/lempuyangtemple.jpg" alt="Gate Of Heaven Tour"></div>
+              <h1 class="fw-bold fs-3 fs-lg-5 mb-3">Gate Of Heaven Tour</h1>
+              <h5 class="text-warning fw-bold mb-4">Price : USD 90/ Car</h5>
               <div class="row mb-5">
                 <div class="col-md-6">
                   <h5 class="fw-bold mb-3">Itinerary :</h5>
                   <ul class="list-unstyled">
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Taman Ayun temple</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Tanah Lot temple</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Lempuyang Temple</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Tirta Gangga Park</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Lahangan sweet</li>
                   </ul>
                 </div>
                 <div class="col-md-6">
@@ -91,16 +92,20 @@
               <div class="d-flex flex-column gap-5">
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">Taman Ayun Temple</h5>
-                    <div class="my-3"><img class="rounded-2" src="./assets/img/dest/tanahlotsunset/tamanayuntemple.jpg" width="100%" alt="Taman Ayun Temple"></div>
-                    <p>Taman Ayun Temple is easily reached through the main road from Denpasar to Singaraja via Bedugul direction. Taman Ayun Temple is a very beautiful Hindu temple uniquely designed with a distinctive style of Balinese architecture and surrounded by a large of fishpond that looks like floating on the water.</p>
+                    <h5 class="fw-bold text-warning">Lempuyang Temple</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/gateofheaven/lempuyangtemple.jpg" alt="Lempuyang Temple">
+                    <p>Lempuyang Temple is one of the biggest Hindu temple located in East Bali islands at Karangasem city, sub-district Abang, Tribuana village. Situated in the top of Bisbis Hill, from this temple you can see the amazing view of mount agung. The temple is a holy place for worship Ida Sanghyang Widhi Wasa in its manifestation as Icwara. Lot of tourist take picture in the gate of lempuyang temple with background mount agung view. The name of Gate of Heaven is come from the tourist that taking picture in the gate of lempuyang temple with beauty mount agung view as background. because of the beautiful scenery, guests call it a view of heaven and a place to take photos at the gate of the temple of Tempuyang. So most guests call this place the gate of heaven</p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">Tanah Lot temple</h5>
-                    <div class="my-3"><img class="rounded-2" src="./assets/img/dest/tanahlotsunset/tanahlottemple.jpg" width="100%" alt="Tanah Lot Temple"></div>
-                    <p>Tanah Lot Temple on a rocky island just off the southwest coast of Bali. One of Bali's most sacred sea temples, Tanah Lot is dedicated to the guardian spirits of the sea. The temple itself is said to be guarded from evil by the sea snakes that inhabit the caves below. The temple itself is not accessible to visitors, but magnificent views can be had from a variety of points nearby.</p>
+                    <h5 class="fw-bold text-warning">Tirta Gangga Park</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/gateofheaven/tirtaganggapark.jpg" alt="Tirta Gangga Park">
+                    <p>Is a beautiful garden with water fountain and fish pond surrounds at East Bali Islands. This garden is built by King of Karangasem for their relaxation with their family. Amazing place for visit during East Bali Tour. This garden is utilized by empire family for bathing place and now have been arranged natty and fascinate. There is big clean water source that is poured into a channel and go to the tower to make a water fountain. The water palace of Tirta gangga was built in 1948 by King Anak Agung Anglurah Ketut Karangasem in east Bali, This palace has been shaped in the form of a beautiful water garden and it is located near a natural spring.</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <h5 class="fw-bold text-warning">Lahangan Sweet</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/gateofheaven/lahangansweet.png" alt="Lahangan Sweet">
+                    <p>Lahangan Sweet offers breathtaking panoramic views of Nusa Penida's rugged coastline and lush landscapes. This scenic viewpoint is renowned for its dramatic cliffside vistas, making it an ideal spot for capturing stunning photos and enjoying the island's natural beauty. As you gaze out over the crystal-clear waters and vibrant greenery, you'll experience a serene escape, perfect for those seeking to immerse themselves in the island's tranquil charm and awe-inspiring scenery.</p>
                   </div>
                 </div>
               </div>
@@ -131,7 +136,7 @@
                       </div>
                       <div class="mb-3">
                         <label class="form-label fw-bold">Tour Packages</label>
-                        <input class="form-control" id="tourPackage" type="text" value="Tanah Lot Sunset" readonly>
+                        <input class="form-control" id="tourPackage" type="text" value="Gate Of Heaven Tour" readonly>
                       </div>
                       <div class="mb-3">
                         <label class="form-label fw-bold">Note ( Optional )</label>
@@ -252,7 +257,7 @@
         const tourPackage = document.getElementById('tourPackage').value;
         const note = document.getElementById('note').value;
 
-        const message = `Form booking *${tourPackage}*\\n====================\\nName : ${name}\\nBooking Date : ${bookingDate}\\nNumber of People : ${people}\\nHotel : ${hotel}\\nTour Packages : ${tourPackage}\\nNote ( Optional ) : ${note}\\n====================`;
+        const message = `Form booking *${tourPackage}*\n====================\nName : ${name}\nBooking Date : ${bookingDate}\nNumber of People : ${people}\nHotel : ${hotel}\nTour Packages : ${tourPackage}\nNote ( Optional ) : ${note}\n====================`;
 
         const encodedMessage = encodeURIComponent(message);
         window.open(`https://wa.me/6289669709690?text=${encodedMessage}`, '_blank');
@@ -267,7 +272,7 @@
       }
 
       body {
-        background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('assets/img/dest/tanahlotsunset/tanahlottemple.jpg') no-repeat center center fixed;
+        background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('assets/img/dest/gateofheaven/lempuyangtemple.jpg') no-repeat center center fixed;
         background-size: cover;
       }
     </style>
