--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <!--    Main Content-->
     <!-- ===============================================-->
     <main class="main" id="top">
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top py-5 d-block" data-navbar-on-scroll="data-navbar-on-scroll">
-        <div class="container"><a class="navbar-brand" href="index.html"><img src="assets/img/logo3.png" height="85" alt="logo" /></a>
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 d-block" data-navbar-on-scroll="data-navbar-on-scroll">
+        <div class="container"><a class="navbar-brand" href="index.html"><img src="assets/img/logo3.png" height="55" alt="logo" /></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base align-items-lg-center align-items-start">
@@ -169,7 +169,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-1 text-dark">USD 65</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="ubud-tour-1.html" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -184,7 +184,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-1 text-dark">USD 55</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="ubud-tour-2.html" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -199,7 +199,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-1 text-dark">USD 50</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="sunrise-tour.html" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -214,7 +214,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-1 text-dark">USD 75</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="kintamani-tour.html" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -229,7 +229,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-1 text-dark">USD 85</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="bedugul-tour.html" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -244,7 +244,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-1 text-dark">USD 80</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="nusa-penida-tour.html" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -259,7 +259,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-1 text-dark">USD 90</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="gate-of-heaven-tour.html" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -274,7 +274,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-1 text-dark">USD 65</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="uluwatu-tour.html" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -289,7 +289,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-1 text-dark">USD 35</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="uluwatu-kecak-tour.html" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -304,7 +304,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-1 text-dark">USD 40</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="tanah-lot-sunset-tour.html" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -319,7 +319,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-1 text-dark">USD 34</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="uluwatu-sunset-tour.html" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -334,7 +334,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-1 text-dark">USD 34</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="ubud-half-day-tour.html" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -349,7 +349,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-1 text-dark">USD 25</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="toya-devasya.html" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -364,7 +364,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-0 text-dark">Contact Us</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="bali-zoo.html" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -379,7 +379,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-0 text-dark">Contact Us</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="#!" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -394,7 +394,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-0 text-dark">Contact Us</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="#!" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -409,7 +409,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-0 text-dark">Contact Us</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="#!" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -424,7 +424,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-0 text-dark">Contact Us</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="#!" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -439,7 +439,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-0 text-dark">Contact Us</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="#!" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -454,7 +454,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-0 text-dark">Contact Us</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="#!" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -469,7 +469,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-0 text-dark">Contact Us</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="#!" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -484,7 +484,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-0 text-dark">Contact Us</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="#!" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -499,7 +499,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-0 text-dark">Contact Us</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="#!" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -514,7 +514,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-0 text-dark">Contact Us</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="#!" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
@@ -529,7 +529,7 @@
                   <div class="mt-auto d-flex align-items-center justify-content-between">
                     <div><span class="text-secondary fs--1 d-block">From</span><span class="fw-bold fs-0 text-dark">Contact Us</span>
                     </div>
-                    <div><span class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" style="z-index: 2; position: relative;">Read More</span></div>
+                    <div><a class="btn btn-warning text-white rounded-pill px-3 fw-bold fs--1" href="#!" style="z-index: 2; position: relative;">Read More</a></div>
                   </div>
                 </div>
               </div>
