--- a/uluwatu-tour.html
+++ b/uluwatu-tour.html
@@ -65,15 +65,18 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <div class="mb-5"><img class="w-100 rounded-3" src="./assets/img/dest/tanahlotsunset/tanahlottemple.jpg" alt="Tanah Lot Sunset"></div>
-              <h1 class="fw-bold fs-3 fs-lg-5 mb-3">Tanah Lot Sunset Tour</h1>
-              <h5 class="text-warning fw-bold mb-4">Price : USD 40/ Car (6 Hours)</h5>
+              <div class="mb-5"><img class="w-100 rounded-3" src="./assets/img/dest/uluwatu/uluwatutemple.jpg" alt="Uluwatu Tour"></div>
+              <h1 class="fw-bold fs-3 fs-lg-5 mb-3">Uluwatu Tour</h1>
+              <h5 class="text-warning fw-bold mb-4">Price : USD 65/ Car</h5>
               <div class="row mb-5">
                 <div class="col-md-6">
                   <h5 class="fw-bold mb-3">Itinerary :</h5>
                   <ul class="list-unstyled">
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Taman Ayun temple</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Tanah Lot temple</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Water Sport</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>GWK (Garuda Wisnu Kencana)</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Melasti beach</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Uluwatu temple</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Dinner Jimbaran Seafood</li>
                   </ul>
                 </div>
                 <div class="col-md-6">
@@ -91,16 +94,32 @@
               <div class="d-flex flex-column gap-5">
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">Taman Ayun Temple</h5>
-                    <div class="my-3"><img class="rounded-2" src="./assets/img/dest/tanahlotsunset/tamanayuntemple.jpg" width="100%" alt="Taman Ayun Temple"></div>
-                    <p>Taman Ayun Temple is easily reached through the main road from Denpasar to Singaraja via Bedugul direction. Taman Ayun Temple is a very beautiful Hindu temple uniquely designed with a distinctive style of Balinese architecture and surrounded by a large of fishpond that looks like floating on the water.</p>
+                    <h5 class="fw-bold text-warning">Water Sport</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/uluwatu/watersport.jpg" alt="Water Sport">
+                    <p>Bali Water Sports Tour is Bali Activities Tour Package which offer Comprehensive range of marine activities with great challenges, exciting and designed full of fun in Bali islands. It is offers variety of water activities from motorizes until non-motorize one and bring you to unforgettable experience to enjoy fun activities in the beach or in the ocean. Bali Water Sports Tour giving the fantastic experience marine adventures for everyone who desires to Enjoy The Exciting Bali Water Sports Tour program such as: Snorkeling, Parasailing, Jet Ski, Donut Boat, Water Ski, Flying Fish, Banana Boat, Wakeboarding, Glass Bottom Boat, Ocean Walker, Diving and Turtle Islands Tour With Competitive Rates. To keep guest comfortable all Bali Water Sports Tour activities are ensured by high quality safety equipment and medical insurance. Just enjoy the exciting Bali Water Sports activities of your choice.</p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">Tanah Lot temple</h5>
-                    <div class="my-3"><img class="rounded-2" src="./assets/img/dest/tanahlotsunset/tanahlottemple.jpg" width="100%" alt="Tanah Lot Temple"></div>
-                    <p>Tanah Lot Temple on a rocky island just off the southwest coast of Bali. One of Bali's most sacred sea temples, Tanah Lot is dedicated to the guardian spirits of the sea. The temple itself is said to be guarded from evil by the sea snakes that inhabit the caves below. The temple itself is not accessible to visitors, but magnificent views can be had from a variety of points nearby.</p>
+                    <h5 class="fw-bold text-warning">GWK (Garuda Wisnu Kencana)</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/uluwatu/gwk.jpg" alt="GWK">
+                    <p>Bali Garuda Wisnu Kencana (GWK) Bali is located in the southern Badung area about 20 minutes from Kuta. That's very easy to access it from the Ngurah Rai Airport and hotels in Nusa Dua. Garuda Wisnu Kencana (GWK) Bali cultural park is located in the hills of limestone and rock, exactly over the hill of Nusa Dua Pecatu-Badung regency that about 40 kilometers south of Denpasar City Bali, it was approximately 30 minutes drive from Ngurah Rai when using a motor vehicle.</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <h5 class="fw-bold text-warning">Melasti beach</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/uluwatu/melastibeach.jpg" alt="Melasti beach">
+                    <p>Melasti Beach is a beautiful beach located below a high cliff. unspoiled blue sea, make this beach to be one of the best in the region Ungasan. because many tourists who visit here, the beach melasti began repaired road to more easily reach the beach. High cliffs cleaved used as a road with many bends. from top, the road looks beautiful with limestone cliffs.</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <h5 class="fw-bold text-warning">Uluwatu temple</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/uluwatu/uluwatutemple.jpg" alt="Uluwatu temple">
+                    <p>Uluwatu Temple is one of Bali's nine key directional temples, though a small temple was claimed to have existed beforehand, the structure was significantly expanded by a Javanese sage, Empu Kuturan in the 11th Century. Another sage from East Java, Dang Hyang Nirartha is credited for constructing the padmasana shrines and is claimed to have attained Moksha.</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <h5 class="fw-bold text-warning">Dinner Jimbaran Seafood</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/uluwatu/dinnerjimbaranseafood.webp" alt="Dinner Jimbaran Seafood">
+                    <p>Jimbaran Seafood Cafes and Restaurants have cemented themselves as a top Bali attraction in their own right. Especially for sunset. The beach has countless cafes and restaurants, some good, some great. There are three main clusters of restaurants.</p>
                   </div>
                 </div>
               </div>
@@ -131,7 +150,7 @@
                       </div>
                       <div class="mb-3">
                         <label class="form-label fw-bold">Tour Packages</label>
-                        <input class="form-control" id="tourPackage" type="text" value="Tanah Lot Sunset" readonly>
+                        <input class="form-control" id="tourPackage" type="text" value="Uluwatu Tour" readonly>
                       </div>
                       <div class="mb-3">
                         <label class="form-label fw-bold">Note ( Optional )</label>
@@ -252,7 +271,7 @@
         const tourPackage = document.getElementById('tourPackage').value;
         const note = document.getElementById('note').value;
 
-        const message = `Form booking *${tourPackage}*\\n====================\\nName : ${name}\\nBooking Date : ${bookingDate}\\nNumber of People : ${people}\\nHotel : ${hotel}\\nTour Packages : ${tourPackage}\\nNote ( Optional ) : ${note}\\n====================`;
+        const message = `Form booking *${tourPackage}*\n====================\nName : ${name}\nBooking Date : ${bookingDate}\nNumber of People : ${people}\nHotel : ${hotel}\nTour Packages : ${tourPackage}\nNote ( Optional ) : ${note}\n====================`;
 
         const encodedMessage = encodeURIComponent(message);
         window.open(`https://wa.me/6289669709690?text=${encodedMessage}`, '_blank');
@@ -267,7 +286,7 @@
       }
 
       body {
-        background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('assets/img/dest/tanahlotsunset/tanahlottemple.jpg') no-repeat center center fixed;
+        background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('assets/img/dest/uluwatu/uluwatutemple.jpg') no-repeat center center fixed;
         background-size: cover;
       }
     </style>
