--- a/kintamani-tour.html
+++ b/kintamani-tour.html
@@ -65,15 +65,18 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <div class="mb-5"><img class="w-100 rounded-3" src="./assets/img/dest/tanahlotsunset/tanahlottemple.jpg" alt="Tanah Lot Sunset"></div>
-              <h1 class="fw-bold fs-3 fs-lg-5 mb-3">Tanah Lot Sunset Tour</h1>
-              <h5 class="text-warning fw-bold mb-4">Price : USD 40/ Car (6 Hours)</h5>
+              <div class="mb-5"><img class="w-100 rounded-3" src="./assets/img/dest/kintamani/mountbatur.jpeg" alt="Kintamani Tour"></div>
+              <h1 class="fw-bold fs-3 fs-lg-5 mb-3">Kintamani Tour</h1>
+              <h5 class="text-warning fw-bold mb-4">Price : USD 75/ Car</h5>
               <div class="row mb-5">
                 <div class="col-md-6">
                   <h5 class="fw-bold mb-3">Itinerary :</h5>
                   <ul class="list-unstyled">
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Taman Ayun temple</li>
-                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Tanah Lot temple</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Tirta ampul holy water</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Art village ( batik, silver, wood carving )</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Mount batur volcano</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Coffee plantation</li>
+                    <li class="d-flex align-items-center mb-2"><i class="fas fa-circle text-warning me-3 small" style="font-size: 8px;"></i>Tukad Cepung</li>
                   </ul>
                 </div>
                 <div class="col-md-6">
@@ -91,16 +94,33 @@
               <div class="d-flex flex-column gap-5">
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">Taman Ayun Temple</h5>
-                    <div class="my-3"><img class="rounded-2" src="./assets/img/dest/tanahlotsunset/tamanayuntemple.jpg" width="100%" alt="Taman Ayun Temple"></div>
-                    <p>Taman Ayun Temple is easily reached through the main road from Denpasar to Singaraja via Bedugul direction. Taman Ayun Temple is a very beautiful Hindu temple uniquely designed with a distinctive style of Balinese architecture and surrounded by a large of fishpond that looks like floating on the water.</p>
+                    <h5 class="fw-bold text-warning">Tirta Empul Temple (Holy Spring Temple)</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/kintamani/tirtaempultemple.jpeg" alt="Tirta Empul Temple">
+                    <p>Tirta Empul temple also known as the Holy Spring Temple located in Tampak Siring, for more thousand years the Balinese worshippers has been come to this temple for having the holy water to purified the body from Bad luck, local people believe if the water in this temple has power to clean body from negative things. a myth described if this sacred spring temple is build by God of Indra give to the dead warriors which been killed by Arrogant king Maya Denawa, the dead warrior come alive after sprang the water from this holy spring temple.</p>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <h5 class="fw-bold text-warning">Tanah Lot temple</h5>
-                    <div class="my-3"><img class="rounded-2" src="./assets/img/dest/tanahlotsunset/tanahlottemple.jpg" width="100%" alt="Tanah Lot Temple"></div>
-                    <p>Tanah Lot Temple on a rocky island just off the southwest coast of Bali. One of Bali's most sacred sea temples, Tanah Lot is dedicated to the guardian spirits of the sea. The temple itself is said to be guarded from evil by the sea snakes that inhabit the caves below. The temple itself is not accessible to visitors, but magnificent views can be had from a variety of points nearby.</p>
+                    <h5 class="fw-bold text-warning">Art village ( batik, silver, wood carving )</h5>
+                    <div class="d-flex gap-3 flex-wrap my-3"><img class="rounded-2" src="./assets/img/dest/ubud1/batikubud.jpg" width="200" alt="Batik"><img class="rounded-2" src="./assets/img/dest/ubud1/silverubud.jpg" width="200" alt="Silver"><img class="rounded-2" src="./assets/img/dest/ubud1/woodcarving.jpg" width="200" alt="Wood Carving"></div>
+                    <p>Ubud is a town on the Indonesian island of Bali in Ubud District, located amongst rice paddies and steep ravines in the central foothills of the Gianyar regency. One of Bali's major arts and culture centres, it has developed a large tourism industry. Ubud is being one of the famous village most visited in Bali islands due this village offered with many kind beautiful art, myth, and history. Is perfect tourist destination for those who love with Art and Culture history.</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <h5 class="fw-bold text-warning">Mount Batur Volcano</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/kintamani/mountbatur.jpeg" alt="Mount Batur Volcano">
+                    <p>Kintamani Village is the object of mountain tourism is very unique and stunning, with cool air condition in the daytime and cold at night. Kintamani is 1500 meters high, the village of Kintamani his a cool, damp climate suited to growing oranges and passion fruit and on market day, which falls every third day, the main street becomes a bustling chaos of vendors, some of whom have traveled from far away. Tourism Object is located in the area is located in the village of Batur. We can watch stunning natural scenery of Penelokan, a combination of Mount Batur and the expanse of black rock with Lake Batur and on a blue caldera.</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <h5 class="fw-bold text-warning">Coffee Plantation or Bali Agrotourism</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/kintamani/coffeeplantation.jpg" alt="Coffee Plantation">
+                    <p>Coffee Plantation or Bali Agrotourism is coffe farm where you can see varius of coffe planation and see the making of the famous animal coffe or known as a coffe luwak. in this place you can see various of plantation such as coffee arabica, coffee robusta, pineapple, balinesse snake fruit, and etc. expereince to see how to make Balinesse coffee, try the best of balinesse coffe or ginger tea with green view river valley. They sell variety of theirs original Balinese coffee products, herb oil and etc and see the civet cat the most expensive coffee maker, wellknown as Luwak, its produce "Coffee Luwak" and the process of the bean passing through the digestive tract of the civet chemically alters the proteins in the Luwak coffee bean to yield more complex and smooth flavors, not found in conventional coffees.</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <h5 class="fw-bold text-warning">Tukad Cepung</h5><img class="w-50 rounded-2 my-3" src="./assets/img/dest/kintamani/tukadcepung.webp" alt="Tukad Cepung">
+                    <p>Tukad Cepung Waterfall still remains as the best virgin waterfall of Bali. The fact that this spot is not known to a lot of people and still not under the commercial tourist spots, you are not under any obligations to pay anything to enter area. However, since the area is well-maintained by the local villagers and some of them contribute in showing and/or explaining the waterfall to the visitors, it would be kind if you gave a tip so they can continue to maintain this hidden spot.</p>
                   </div>
                 </div>
               </div>
@@ -131,7 +151,7 @@
                       </div>
                       <div class="mb-3">
                         <label class="form-label fw-bold">Tour Packages</label>
-                        <input class="form-control" id="tourPackage" type="text" value="Tanah Lot Sunset" readonly>
+                        <input class="form-control" id="tourPackage" type="text" value="Kintamani Tour" readonly>
                       </div>
                       <div class="mb-3">
                         <label class="form-label fw-bold">Note ( Optional )</label>
@@ -252,7 +272,7 @@
         const tourPackage = document.getElementById('tourPackage').value;
         const note = document.getElementById('note').value;
 
-        const message = `Form booking *${tourPackage}*\\n====================\\nName : ${name}\\nBooking Date : ${bookingDate}\\nNumber of People : ${people}\\nHotel : ${hotel}\\nTour Packages : ${tourPackage}\\nNote ( Optional ) : ${note}\\n====================`;
+        const message = `Form booking *${tourPackage}*\n====================\nName : ${name}\nBooking Date : ${bookingDate}\nNumber of People : ${people}\nHotel : ${hotel}\nTour Packages : ${tourPackage}\nNote ( Optional ) : ${note}\n====================`;
 
         const encodedMessage = encodeURIComponent(message);
         window.open(`https://wa.me/6289669709690?text=${encodedMessage}`, '_blank');
@@ -267,7 +287,7 @@
       }
 
       body {
-        background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('assets/img/dest/tanahlotsunset/tanahlottemple.jpg') no-repeat center center fixed;
+        background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('assets/img/dest/kintamani/mountbatur.jpeg') no-repeat center center fixed;
         background-size: cover;
       }
     </style>
