--- a/ubud-half-day-tour.html
+++ b/ubud-half-day-tour.html
@@ -10,18 +10,18 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Jadoo | Travel Agency Landing Page UI</title>
+    <title>Bali Mai | Tour &amp; Travel Culture Fun Relax</title>
 
 
     <!-- ===============================================-->
     <!--    Favicons-->
     <!-- ===============================================-->
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicons/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/logo3.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/logo3.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/logo3.png">
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/logo3.png">
     <link rel="manifest" href="./assets/img/favicons/manifest.json">
-    <meta name="msapplication-TileImage" content="./assets/img/favicons/mstile-150x150.png">
+    <meta name="msapplication-TileImage" content="./assets/img/logo3.png">
     <meta name="theme-color" content="#ffffff">
 
 
@@ -39,8 +39,8 @@
     <!--    Main Content-->
     <!-- ===============================================-->
     <main class="main" id="top">
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top py-5 d-block" data-navbar-on-scroll="data-navbar-on-scroll">
-        <div class="container"><a class="navbar-brand" href="index.html"><img src="./assets/img/logo3.png" height="85" alt="logo" /></a>
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 d-block" data-navbar-on-scroll="data-navbar-on-scroll">
+        <div class="container"><a class="navbar-brand" href="index.html"><img src="./assets/img/logo3.png" height="55" alt="logo" /></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base align-items-lg-center align-items-start">
